...
    ///
    lazy var nextLessonBtn: UIButton = {
        var config = UIButton.Configuration.plain()
        config.image = UIImage(systemName: "chevron.right")
        config.imagePlacement = .trailing
        config.imagePadding = 5
        config.title = "Next lesson"
        config.buttonSize = .medium
        
        let button = UIButton(configuration: config, primaryAction: UIAction{
           [weak self] _ in
            self?.presentNextLessonController()
        })
...
    ///- Returns: A custom download button for navigation bar item
    lazy var downloadBtn: UIButton = {
        var config = UIButton.Configuration.plain()
        config.image = UIImage(systemName: "icloud.and.arrow.down")
        config.imagePlacement = .leading
        config.imagePadding = 5
        config.title = "Download"
        config.buttonSize = .small
        
        let button = UIButton(configuration: config, primaryAction: UIAction{ [weak self] _ in
            self?.lessonDetailViewModel.startDownloadingVideo()
        })
        return button
...
