...
        return progressView
    }()
    
    ///- Returns: Cancel button that cancels downloading video
    lazy var cancelBtn: UIButton = {
        var config = UIButton.Configuration.bordered()
        config.title = "Cancel downloading"
        config.buttonSize = .small
        config.baseBackgroundColor = .darkGray
        config.baseForegroundColor = .white
        
        let button = UIButton(configuration: config, primaryAction: UIAction{  [weak self] _ in
            self?.didClickOnCancelButton()
...
